--- a/WordGame/Base.lproj/Main.storyboard
+++ b/WordGame/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -105,11 +106,11 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="BtnCorrect" destination="eeN-0G-BN1" id="cIm-TC-k3J"/>
-                        <outlet property="BtnWrong" destination="fnB-4b-Ece" id="giq-TH-6Kh"/>
+                        <outlet property="BtnCorrect" destination="eeN-0G-BN1" id="GEs-Zm-BZa"/>
+                        <outlet property="BtnWrong" destination="fnB-4b-Ece" id="QFW-bP-tx9"/>
                         <outlet property="lblCorrectAttempts" destination="W0t-Mm-Oua" id="j73-bD-KZV"/>
-                        <outlet property="lblEnglishWord" destination="fGn-Um-QRc" id="ibg-BX-L3x"/>
-                        <outlet property="lblSpanishWord" destination="GEF-BX-she" id="XVo-tF-xwq"/>
+                        <outlet property="lblEnglishWord" destination="GEF-BX-she" id="iIV-NF-Ahd"/>
+                        <outlet property="lblSpanishWord" destination="fGn-Um-QRc" id="NfJ-SS-7vg"/>
                         <outlet property="lblWrongAttempts" destination="okn-sw-doo" id="XhQ-o4-POk"/>
                     </connections>
                 </viewController>
